--- a/modules/global/src/ru/iovchinnikov/talks/entity/messages.properties
+++ b/modules/global/src/ru/iovchinnikov/talks/entity/messages.properties
@@ -1,9 +1,10 @@
 TestEntity.name = Name
 TestEntity = Test Entity
-Comment.contents = Contents
+Comment.contents = Comment
 Comment.author = Author
 Comment.entity = Entity
 Comment.date = Date
 Comment = Comment
-Comment.parent = Parent
+Comment.parent = Reply to
 Comment.entityName = Entity name
+Comment.isAnswer = RE:
