нельзя удалять комментарии, автором которых не являешься

--- a/modules/global/src/ru/iovchinnikov/talks/entity/messages.properties
+++ b/modules/global/src/ru/iovchinnikov/talks/entity/messages.properties
@@ -7,4 +7,4 @@ Comment.date = Date
 Comment = Comment
 Comment.parent = Reply to
 Comment.entityName = Entity name
-Comment.isAnswer = RE:
+Comment.hasAnswer = RE:
