--- a/modules/global/src/ru/iovchinnikov/talks/entity/messages_ru.properties
+++ b/modules/global/src/ru/iovchinnikov/talks/entity/messages_ru.properties
@@ -1,5 +1,5 @@
 Comment.parent = В ответ на
-Comment.isAnswer = RE:
 Comment.contents = Комментарий
 Comment.author = Автор
 Comment.date = Дата
+Comment.hasAnswer = RE:
