--- a/modules/web/src/ru/iovchinnikov/talks/web/comment/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web/comment/messages.properties
@@ -1,2 +1,4 @@
 browseCaption = Comment browser
 editorCaption = Comment editor
+editView = View
+emptyComment = Your comment is empty.\nCancel it and don't save changes, please.
