Не сохраняется установленный флажок на родительском комментарии, при добавлении ответа

--- a/modules/web/src/ru/iovchinnikov/talks/web/comment/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web/comment/messages.properties
@@ -2,3 +2,6 @@ browseCaption = Comment browser
 editorCaption = Comment editor
 editView = View
 emptyComment = Your comment is empty.\nCancel it and don't save changes, please.
+btnCloseCaption = Close
+selectComment = Select a comment to reply
+btnReplyCaption = Reply
