--- a/modules/web/src/ru/iovchinnikov/talks/web/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web/messages.properties
@@ -8,3 +8,4 @@ loginWindow.logoImage = branding/app-icon-login.png
 menu-config.application-discuss = Application
 menu-config.discuss$Comment.browse = Comments
 menu-config.discuss$TestEntity.browse = Test Entities
+menu-config.app = App
