--- a/modules/web/src/ru/iovchinnikov/talks/web/comment/messages_ru.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web/comment/messages_ru.properties
@@ -2,3 +2,6 @@ browseCaption = Комментарии
 editorCaption = Комментарий
 editView = Просмотреть
 emptyComment = Ваш комментарий пуст.\nОтмените его и не сохраняйте изменения, пожалуйста.
+btnCloseCaption = Закрыть
+selectComment = Выберите комментарий, на который хотите ответить
+btnReplyCaption = Ответить
