Возможность работы с браузеров сущностей. не тестировано

--- a/modules/global/src/ru/iovchinnikov/talks/entity/messages.properties
+++ b/modules/global/src/ru/iovchinnikov/talks/entity/messages.properties
@@ -1,5 +1,3 @@
-TestEntity.name = Name
-TestEntity = Test Entity
 Comment.contents = Comment
 Comment.author = Author
 Comment.entity = Entity
@@ -8,3 +6,5 @@ Comment = Comment
 Comment.parent = Reply to
 Comment.entityName = Entity name
 Comment.hasAnswer = RE:
+Test.name = Name
+Test = Test
