--- a/modules/global/src/ru/iovchinnikov/talks/entity/messages_ru.properties
+++ b/modules/global/src/ru/iovchinnikov/talks/entity/messages_ru.properties
@@ -2,4 +2,4 @@ Comment.parent = В ответ на
 Comment.contents = Комментарий
 Comment.author = Автор
 Comment.date = Дата
-Comment.hasAnswer = RE:
+Comment.hasAnswer = Ответ:
