--- a/modules/web/src/ru/iovchinnikov/talks/web/comment/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web/comment/messages.properties
@@ -5,3 +5,4 @@ emptyComment = Your comment is empty.\nCancel it and don't save changes, please.
 btnCloseCaption = Close
 selectComment = Select a comment to reply
 btnReplyCaption = Reply
+parent = Reply to
