--- a/modules/web/src/ru/iovchinnikov/talks/web/comment/messages_ru.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web/comment/messages_ru.properties
@@ -5,3 +5,4 @@ emptyComment = Ваш комментарий пуст.\nОтмените его 
 btnCloseCaption = Закрыть
 selectComment = Выберите комментарий, на который хотите ответить
 btnReplyCaption = Ответить
+parent = В ответ на
