--- a/modules/web/src/ru/iovchinnikov/talks/web/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web/messages.properties
@@ -9,3 +9,4 @@ menu-config.application-discuss = Application
 menu-config.discuss$Comment.browse = Comments
 menu-config.discuss$TestEntity.browse = Test Entities
 menu-config.app = App
+menu-config.discuss$Test.browse = Tests
