Добавлены статусы комментариев для модерации, реализован датасорс для обработки статусов

--- a/modules/global/src/ru/iovchinnikov/talks/entity/messages.properties
+++ b/modules/global/src/ru/iovchinnikov/talks/entity/messages.properties
@@ -6,5 +6,12 @@ Comment = Comment
 Comment.parent = Reply to
 Comment.entityName = Entity name
 Comment.hasAnswer = RE:
+Comment.commentStatus = Comment status
 Test.name = Name
 Test = Test
+CommentStatus.notApproved = Notapproved
+CommentStatus.approved = Approved
+CommentStatus.rejected = Rejected
+CommentStatus.deleted = Delete
+TestEntity.name = Name
+TestEntity = Test Entity
