--- a/modules/web/src/ru/iovchinnikov/talks/web/comment/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web/comment/messages.properties
@@ -6,3 +6,6 @@ btnCloseCaption = Close
 selectComment = Select a comment to reply
 btnReplyCaption = Reply
 parent = Reply to
+Hide = Hide
+Approve = Approve
+Reject = Reject
