--- a/modules/web/src/ru/iovchinnikov/talks/web/comment/messages_ru.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web/comment/messages_ru.properties
@@ -6,3 +6,6 @@ btnCloseCaption = Закрыть
 selectComment = Выберите комментарий, на который хотите ответить
 btnReplyCaption = Ответить
 parent = В ответ на
+Hide = Удалить (скрыть)
+Approve = Подтвердить
+Reject = Отклонить
