Добавлен отдельный экран для модерации

--- a/modules/global/src/ru/iovchinnikov/talks/entity/messages.properties
+++ b/modules/global/src/ru/iovchinnikov/talks/entity/messages.properties
@@ -12,6 +12,4 @@ Test = Test
 CommentStatus.notApproved = Notapproved
 CommentStatus.approved = Approved
 CommentStatus.rejected = Rejected
-CommentStatus.deleted = Delete
-TestEntity.name = Name
-TestEntity = Test Entity
+CommentStatus.deleted = Deleted
