--- a/modules/global/src/ru/iovchinnikov/talks/entity/messages_ru.properties
+++ b/modules/global/src/ru/iovchinnikov/talks/entity/messages_ru.properties
@@ -3,3 +3,7 @@ Comment.contents = Комментарий
 Comment.author = Автор
 Comment.date = Дата
 Comment.hasAnswer = Ответ:
+CommentStatus.deleted = Удалено
+CommentStatus.approved = Подтверждено
+CommentStatus.rejected = Отклонено
+CommentStatus.notApproved = Не подтверждено
