--- a/modules/web/src/ru/iovchinnikov/talks/web/comment/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web/comment/messages.properties
@@ -9,3 +9,8 @@ parent = Reply to
 Hide = Hide
 Approve = Approve
 Reject = Reject
+Delete = Delete
+Premoderation = Premoderation
+Postmoderation = Postmoderation
+Restore = Restore
+Comment\ moderator = Comment moderator
