--- a/modules/web/src/ru/iovchinnikov/talks/web/comment/messages_ru.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web/comment/messages_ru.properties
@@ -9,3 +9,8 @@ parent = В ответ на
 Hide = Удалить (скрыть)
 Approve = Подтвердить
 Reject = Отклонить
+Delete = Удалить (скрыть)
+Premoderation = Премодерация
+Postmoderation = Постмодерация
+Restore = Восстановить
+Comment\ moderator = Модерирование комментариев
