--- a/modules/web/src/ru/iovchinnikov/talks/web/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/talks/web/messages.properties
@@ -10,3 +10,4 @@ menu-config.discuss$Comment.browse = Comments
 menu-config.discuss$TestEntity.browse = Test Entities
 menu-config.app = App
 menu-config.discuss$Test.browse = Tests
+menu-config.discuss$CommentModerator.browse = Comment moderation
