--- a/modules/global/src/ru/iovchinnikov/talks/entity/messages_ru.properties
+++ b/modules/global/src/ru/iovchinnikov/talks/entity/messages_ru.properties
@@ -3,6 +3,9 @@ Comment.contents = Комментарий
 Comment.author = Автор
 Comment.date = Дата
 Comment.hasAnswer = Ответ:
+Comment.commentStatus = Статус
+Comment.entityName = Сущность
+Comment.entity = ID
 CommentStatus.deleted = Удалено
 CommentStatus.approved = Подтверждено
 CommentStatus.rejected = Отклонено
