Переключение между пре- и постмодерацией

--- a/modules/global/src/ru/iovchinnikov/talks/entity/messages.properties
+++ b/modules/global/src/ru/iovchinnikov/talks/entity/messages.properties
@@ -12,3 +12,7 @@ CommentStatus.notApproved = Notapproved
 CommentStatus.approved = Approved
 CommentStatus.rejected = Rejected
 CommentStatus.deleted = Deleted
+CommentPreference.moderationType = Moderation type
+CommentPreference = Comment Preference
+CommentPreferenceType.Premoderation = Premoderation
+CommentPreferenceType.Postmoderation = Postmoderation
