--- a/modules/global/src/ru/iovchinnikov/talks/entity/messages_ru.properties
+++ b/modules/global/src/ru/iovchinnikov/talks/entity/messages_ru.properties
@@ -9,3 +9,5 @@ CommentStatus.deleted = Удалено
 CommentStatus.approved = Подтверждено
 CommentStatus.rejected = Отклонено
 CommentStatus.notApproved = Не подтверждено
+CommentPreferenceType.Premoderation = Премодерация
+CommentPreferenceType.Postmoderation = Постмодерация
